now working with multiple years
and functionality of button in mainview is now pseudo

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/stat_sys_download"
+        app:srcCompat="@drawable/sync_24dp_1f1f1f_fill0_wght400_grad0_opsz24"
         />
 
 
