--- a/app/src/main/res/layout/list_item_two_line.xml
+++ b/app/src/main/res/layout/list_item_two_line.xml
@@ -34,14 +34,11 @@
         android:layout_height="80dp"
         android:layout_marginStart="8dp">
 
-        <ImageView
+        <com.lrs.dasparlament.TopOffsetCropImageView
             android:id="@+id/coverImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:contentDescription="@string/cover_image"
-            android:scaleType="centerCrop" />
-
-        <!-- fade overlay -->
+            android:contentDescription="@string/cover_image" />
         <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
